fix sticky header on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 .thead {
+    position: -webkit-sticky;
     position: sticky;
     top: 0;
     background-color: #f2f2f2;
